Added parameter to disable server info headers.